# add_library(Structs ${HEADERS})
# set_target_properties(Structs PROPERTIES PUBLIC_HEADER "${HEADERS}")
# install(TARGETS Structs EXPORT JunglesDataStructsTargets
#     RUNTIME DESTINATION "${INSTALL_BIN_DIR}" COMPONENT bin
#     LIBRARY DESTINATION "${INSTALL_LIB_DIR}" COMPONENT shlib
#     ARCHIVE DESTINATION "${INSTALL_LIB_DIR}" COMPONENT lib
#     PUBLIC_HEADER DESTINATION "${INSTALL_INCLUDE_DIR}" COMPONENT dev)
add_library(Structs ${HEADERS} empty.c)
set_target_properties(Structs PROPERTIES PUBLIC_HEADER "${HEADERS}")
install(TARGETS Structs EXPORT JunglesDataStructsTargets
    RUNTIME DESTINATION "${INSTALL_BIN_DIR}" COMPONENT bin
    LIBRARY DESTINATION "${INSTALL_LIB_DIR}" COMPONENT shlib
    ARCHIVE DESTINATION "${INSTALL_LIB_DIR}" COMPONENT lib
    PUBLIC_HEADER DESTINATION "${INSTALL_INCLUDE_DIR}" COMPONENT dev)
